Closed
Bug 1115214
Opened 11 years ago
Closed 11 years ago
[Fetch] GlobalFetch.fetch() and read body methods make crash for Maple
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla38
People
(Reporter: crimsteam, Assigned: nsm)
References
Details
Attachments
(3 files)
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:34.0) Gecko/20100101 Firefox/34.0
Build ID: 20141125180439
Steps to reproduce:
Continuation of https://bugzilla.mozilla.org/show_bug.cgi?id=1109574#c4
I noticed that using fetch() method in Maple version make some crash. This happen when I use some url (even in the same origin) and try read body. I don't get crash when using exactly the same page where run code (via passing empty string). You can check this through attached file.
This problem is more painful for local file (file://) where passing empty string will always crash browser.
| Reporter | ||
Updated•11 years ago
|
Attachment #8541020 -
Attachment description: This file will crash Maple → This file will not crash Maple (empty string)
| Reporter | ||
Comment 1•11 years ago
|
||
| Reporter | ||
Updated•11 years ago
|
Attachment #8541023 -
Attachment description: This file will crash Maple (empty string) → This file will crash Maple (different origins)
Comment 2•11 years ago
|
||
Mikhail, can you take a look?
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: needinfo?(nsm.nikhil)
| Assignee | ||
Comment 3•11 years ago
|
||
Thanks for pointing this out!
The problem was that on the main thread, a response with no body would go through the consume body steps synchronously, leading to mConsumePromise being null by the time it was returned from ConsumeBody().
| Assignee | ||
Updated•11 years ago
|
Assignee: nobody → nsm.nikhil
Status: NEW → ASSIGNED
| Assignee | ||
Updated•11 years ago
|
Flags: needinfo?(nsm.nikhil)
| Assignee | ||
Comment 4•11 years ago
|
||
Comment on attachment 8541100 [details] [diff] [review]
Fetch API: Always consume body asynchronously
Andrea, this is based of the Basic HTTP fetch patch.
Attachment #8541100 -
Flags: review?(amarchesini)
Updated•11 years ago
|
Attachment #8541100 -
Flags: review?(amarchesini) → review+
| Assignee | ||
Comment 5•11 years ago
|
||
| Assignee | ||
Updated•11 years ago
|
Blocks: dom-fetch-api
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•