Bug 1115214 - Fetch API: Always consume body asynchronously. r=baku